inspected gamma 01 fused lasso

--- a/thesis/5m-fused-cv.Rmd
+++ b/thesis/5m-fused-cv.Rmd
@@ -74,8 +74,6 @@ err_mat_resc_list <- replot_err_mat(err_mat_p_list)
 err_mat_resc_list[[1]] + err_mat_resc_list[[2]] + err_mat_resc_list[[3]] + err_mat_resc_list[[4]] + err_mat_resc_list[[5]]
 ```
 
-
-
 Below we can see the minimum MSE for each fold.
 ```{r}
 apply(err_mat, 2, min)
@@ -156,8 +154,23 @@ pred_plot_list <- list(pred_plot_1,pred_plot_2,pred_plot_3,pred_plot_4,pred_plot
 pred_plot_1 + pred_plot_2 + pred_plot_3 + pred_plot_4 +
   pred_plot_5
 ```
+
+
+```{r}
+best_l_res <- readRDS(paste0(path_to_model_folder, "best-lambda-res.rds"))
+best_l_res
+```
+
+```{r}
+err_line_full <- readRDS(paste0(path_to_model_folder, "err-mat-plots/error-line-plot-full.rds"))
+err_line_full
+```
+
+
 ```{r}
 pred_plot_full <- readRDS(paste0(path_to_model_folder, "pred-plots/pred-plot-full.rds"))
+attr(pred_plot_full, "mse")
+pred_plot_full
 ```
 
 ```{r}
