--- a/thesis/5o-fused-gamma-01.Rmd
+++ b/thesis/5o-fused-gamma-01.Rmd
@@ -22,7 +22,7 @@ source("../code/R/helper-functions.R")
 # length(ids$test$Testing060)
 ```
 ```{r}
-path_to_model_folder <- "../results/CV-lasso/small-fused-cv-1k-gamma-01//"
+path_to_model_folder <- "../results/CV-fused/small-fused-1k-gamma-01/"
 ```
 
 ## Error plots
@@ -33,7 +33,7 @@ path_to_model_folder <- "../results/CV-lasso/small-fused-cv-1k-gamma-01//"
 <!-- err_mat <- err_mat[1:60,] -->
 <!-- ``` -->
 
-<!-- ```{r} -->
+<!-- ```{r} --
 <!-- lambda_id <- c(1:60) -->
 <!-- mse <- apply(err_mat, 1, mean) -->
 <!-- b <- mse -->
@@ -44,6 +44,7 @@ path_to_model_folder <- "../results/CV-lasso/small-fused-cv-1k-gamma-01//"
 ```{r}
 err_mat <- readRDS(paste0(path_to_model_folder, "/err-mat.rds"))
 #lambdas <- readRDS(paste0(path_to_model_folder, "/lambda-vec.rds"))
+plot(err_mat[,1])
 ```
 
 
@@ -74,6 +75,18 @@ err_mat_resc_list <- replot_err_mat(err_mat_p_list)
 err_mat_resc_list[[1]] + err_mat_resc_list[[2]] + err_mat_resc_list[[3]] + err_mat_resc_list[[4]] + err_mat_resc_list[[5]]
 ```
 
+```{r}
+# inspect the models
+model_list <- load_models(paste0(path_to_model_folder, "fold-models"))
+m1 <- model_list[[1]]
+b1 <- m1$beta
+vec <- apply(b1, 1, sum)
+sum(vec!=0)
+w <- b1[,st] != 0
+b1[w,st]
+range(b1[w,])
+plot(ts(c(b1[w,])))
+```
 
 
 Below we can see the minimum MSE for each fold.
@@ -96,6 +109,7 @@ pc4 <- readRDS(paste0(path_to_model_folder, "/coef-plots/coef-plot-fold-4.rds"))
 pc5 <- readRDS(paste0(path_to_model_folder, "/coef-plots/coef-plot-fold-5.rds"))
 
 l <- list(pc1,pc2,pc3,pc4,pc5)
+l <- list(pc2,pc3,pc4,pc5)
 a1 <- ggarrange(plotlist = l, ncol = 3, nrow = 2,
          common.legend = TRUE)
 a1
@@ -156,5 +170,32 @@ pred_plot_list <- list(pred_plot_1,pred_plot_2,pred_plot_3,pred_plot_4,pred_plot
 pred_plot_1 + pred_plot_2 + pred_plot_3 + pred_plot_4 +
   pred_plot_5
 ```
+```{r}
+best_l_res <- readRDS(paste0(path_to_model_folder, "best-lambda-res.rds"))
+best_l_res
+```
+
+```{r}
+err_line_full <- readRDS(paste0(path_to_model_folder, "err-mat-plots/error-line-plot-full.rds"))
+err_line_full
+```
+
+
+```{r}
+pred_plot_full <- readRDS(paste0(path_to_model_folder, "pred-plots/pred-plot-full.rds"))
+attr(pred_plot_full, "mse")
+pred_plot_full
+```
+
+```{r}
+coef_full <- readRDS(paste0(path_to_model_folder, "coef-plots/coef-plot-full.rds"))
+coef_full
+```
+```{r}
+coef_full_drop <- readRDS(paste0(path_to_model_folder, "coef-plots/coef-plot-drop-out-full.rds"))
+coef_full_drop
+
+```
+
 
 
