--- a/thesis/5g-lasso-with-diff.Rmd
+++ b/thesis/5g-lasso-with-diff.Rmd
@@ -22,7 +22,9 @@ source("../code/R/helper-functions.R")
 # length(ids$test$Testing060)
 ```
 ```{r}
-path_to_model_folder <- "../results/CV-lasso/cv-lasso-og-diff-with-ts-and-stand-maxdiff-2"
+#path_to_model_folder <- "../results/CV-lasso/cv-lasso-og-diff-with-ts-and-stand-maxdiff-2"
+path_to_model_folder <- "../results/CV-lasso/cv-lasso-diff-1"
+
 ```
 
 
@@ -141,32 +143,18 @@ the predictions made by the model.
 pred_plot_1 <- readRDS(paste0(path_to_model_folder, "/pred-plots/pred-plot-fold-1.rds"))
 #pred_plot_1
 mse_1 <- get_mse_from_pred_plot(pred_plot_1)
-```
-```{r}
 pred_plot_2 <- readRDS(paste0(path_to_model_folder, "/pred-plots/pred-plot-fold-2.rds"))
 #pred_plot_2
 mse_2 <- get_mse_from_pred_plot(pred_plot_2)
-
-```
-```{r}
 pred_plot_3 <- readRDS(paste0(path_to_model_folder, "/pred-plots/pred-plot-fold-3.rds"))
 #pred_plot_3
 mse_3 <- get_mse_from_pred_plot(pred_plot_3)
-
-```
-```{r}
 pred_plot_4 <- readRDS(paste0(path_to_model_folder, "/pred-plots/pred-plot-fold-4.rds"))
 #pred_plot_4
 mse_4 <- get_mse_from_pred_plot(pred_plot_4)
-
-```
-```{r}
 pred_plot_5 <- readRDS(paste0(path_to_model_folder, "/pred-plots/pred-plot-fold-5.rds"))
 #pred_plot_5
 mse_5 <- get_mse_from_pred_plot(pred_plot_5)
-
-```
-```{r}
 pred_plot_list <- list(pred_plot_1,pred_plot_2,pred_plot_3,pred_plot_4,pred_plot_5)
 #lapply(pred_plot_list, get_mse_from_pred_plot)
 ```
